[gd_scene load_steps=6 format=3 uid="uid://cmm57kdltrmfb"]

[ext_resource type="PackedScene" uid="uid://4rmt8ldqf6st" path="res://scenes/ui/scenario_list.tscn" id="1_cbrkm"]
[ext_resource type="Script" uid="uid://ciwmawsc74nvy" path="res://scripts/ui/menus/menu_mapselect.gd" id="1_vyrjl"]
[ext_resource type="PackedScene" uid="uid://rdg8wdd5e6lu" path="res://scenes/ui/map_list.tscn" id="2_nw66n"]
[ext_resource type="PackedScene" uid="uid://bsdi2res4r8iy" path="res://scenes/ui/map_icon.tscn" id="3_nw66n"]
[ext_resource type="PackedScene" uid="uid://6lvn3tolsp7r" path="res://scenes/ui/buttons/menu_button.tscn" id="4_4xk28"]

[node name="MapSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
script = ExtResource("1_vyrjl")

[node name="ScenarioList" parent="." instance=ExtResource("1_cbrkm")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -680.0
offset_top = -500.0
offset_right = -40.0
offset_bottom = 205.0
grow_horizontal = 0

[node name="MapList" parent="." instance=ExtResource("2_nw66n")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 40.0
offset_top = -500.0
offset_right = 680.0
offset_bottom = 205.0
grow_horizontal = 1

[node name="MapIcon" parent="." instance=ExtResource("3_nw66n")]
layout_mode = 1
offset_top = -360.0
offset_bottom = 201.99927

[node name="StartButton" parent="." instance=ExtResource("4_4xk28")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.78700006
anchor_right = 0.5
anchor_bottom = 0.78700006
offset_left = -240.0
offset_top = 0.039916992
offset_right = 80.00049
offset_bottom = 100.03998
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
default_text = "Start"
justification = 1

[node name="BackButton" parent="." instance=ExtResource("4_4xk28")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -150.0
offset_right = 500.0
offset_bottom = -50.0
grow_vertical = 0
default_text = "Go Back"
default_color = Color(0.54497427, 0.5449743, 0.5449741, 1)
press_color = Color(0, 0, 0, 1)

[node name="MenuButton" parent="." instance=ExtResource("4_4xk28")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -275.0
offset_right = 500.0
offset_bottom = -174.9997
grow_vertical = 0
default_text = "Menu"
default_color = Color(0.54497427, 0.5449743, 0.5449741, 1)
press_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_pressed"]
